client-java/tags/Plugin_start/src/main/org/firebirdsql/jdbc/parser/JaybirdSqlParser.java
// $ANTLR 3.0.1 D:\\projects\\Firebird\\client-java.22.head\\src\\main\\org\\firebirdsql\\jdbc\\parser\\JaybirdSql.g3 2008-06-20 22:29:25

package org.firebirdsql.jdbc.parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class JaybirdSqlParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALL", "AS", "AVG", "BOTH", "CAST", "CHARACTER", "COUNT", "COLLATE", "CURRENT_USER", "CURRENT_ROLE", "CURRENT_DATE", "CURRENT_TIME", "CURRENT_TIMESTAMP", "DEFAULT", "DELETE", "DISTINCT", "DB_KEY", "EXTRACT", "EXECUTE", "FOR", "FROM", "GEN_ID", "INSERT", "INTO", "LEADING", "MATCHING", "MINIMUM", "MAXIMUM", "NULL", "NEXT", "OR", "PROCEDURE", "RETURNING", "SEGMENT", "SELECT", "SET", "SUBSTRING", "SUB_TYPE", "SUM", "TRIM", "TRAILING", "UPDATE", "VALUE", "VALUES", "KW_BLOB", "KW_BIGINT", "KW_CHAR", "KW_DATE", "KW_DECIMAL", "KW_DOUBLE", "KW_PRECISION", "KW_FLOAT", "KW_INTEGER", "KW_INT", "KW_NUMERIC", "KW_SMALLINT", "KW_TIME", "KW_TIMESTAMP", "KW_VARCHAR", "KW_SET", "KW_SIZE", "GENERIC_ID", "QUOTED_ID", "LEFT_PAREN", "RIGHT_PAREN", "STRING", "INTEGER", "REAL", "COMMA", "LETTER", "ESCqd", "WS", "SL_COMMENT", "ESCqs", "'='", "'.'", "'+'", "'-'", "'*'", "'/'", "'||'", "'?'", "'['", "']'", "':'"
    };
    public static final int CAST=8;
    public static final int KW_TIMESTAMP=61;
    public static final int KW_CHAR=50;
    public static final int CURRENT_USER=12;
    public static final int LETTER=73;
    public static final int KW_SIZE=64;
    public static final int EXECUTE=22;
    public static final int CURRENT_TIME=15;
    public static final int SUB_TYPE=41;
    public static final int UPDATE=45;
    public static final int FOR=23;
    public static final int KW_FLOAT=55;
    public static final int COUNT=10;
    public static final int SUM=42;
    public static final int EOF=-1;
    public static final int QUOTED_ID=66;
    public static final int CHARACTER=9;
    public static final int KW_BIGINT=49;
    public static final int ESCqs=77;
    public static final int AS=5;
    public static final int RIGHT_PAREN=68;
    public static final int KW_PRECISION=54;
    public static final int KW_TIME=60;
    public static final int INSERT=26;
    public static final int COMMA=72;
    public static final int KW_NUMERIC=58;
    public static final int MINIMUM=30;
    public static final int RETURNING=36;
    public static final int AVG=6;
    public static final int ALL=4;
    public static final int KW_SET=63;
    public static final int BOTH=7;
    public static final int NEXT=33;
    public static final int EXTRACT=21;
    public static final int CURRENT_TIMESTAMP=16;
    public static final int SELECT=38;
    public static final int INTO=27;
    public static final int SEGMENT=37;
    public static final int ESCqd=74;
    public static final int COLLATE=11;
    public static final int INTEGER=70;
    public static final int KW_VARCHAR=62;
    public static final int KW_BLOB=48;
    public static final int KW_SMALLINT=59;
    public static final int KW_INT=57;
    public static final int KW_DECIMAL=52;
    public static final int NULL=32;
    public static final int DEFAULT=17;
    public static final int VALUES=47;
    public static final int TRAILING=44;
    public static final int DB_KEY=20;
    public static final int SET=39;
    public static final int DELETE=18;
    public static final int GEN_ID=25;
    public static final int VALUE=46;
    public static final int KW_DOUBLE=53;
    public static final int PROCEDURE=35;
    public static final int LEADING=28;
    public static final int SUBSTRING=40;
    public static final int REAL=71;
    public static final int KW_DATE=51;
    public static final int MATCHING=29;
    public static final int WS=75;
    public static final int CURRENT_ROLE=13;
    public static final int SL_COMMENT=76;
    public static final int GENERIC_ID=65;
    public static final int OR=34;
    public static final int TRIM=43;
    public static final int LEFT_PAREN=67;
    public static final int KW_INTEGER=56;
    public static final int MAXIMUM=31;
    public static final int FROM=24;
    public static final int DISTINCT=19;
    public static final int CURRENT_DATE=14;
    public static final int STRING=69;

        public JaybirdSqlParser(TokenStream input) {
            super(input);
            ruleMemo = new HashMap[139+1];
         }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "D:\\projects\\Firebird\\client-java.22.head\\src\\main\\org\\firebirdsql\\jdbc\\parser\\JaybirdSql.g3"; }

    
    	private boolean _inReturning;
    	//protected boolean _hasReturning;
    	//protected String _tableName;
    	//protected String _selectClause;
    	protected boolean _defaultValues;
    	//protected java.util.ArrayList _columns = new java.util.ArrayList();
    	//protected java.util.ArrayList _returningColumns = new java.util.ArrayList();
    	//protected java.util.ArrayList _values = new java.util.ArrayList();
    	protected JaybirdStatementModel statementModel = new JaybirdStatementModel();
    	
    	protected int _mismatchCount;
    	protected java.util.ArrayList _errorMessages = new java.util.ArrayList();
    	
    	
    	public boolean hasReturning() {
    		return statementModel.getReturningColumns().size() == 0;
    	}
    	
    	public JaybirdStatementModel getStatementModel() {
    		return statementModel;
    	}
    	
    	public int getMismatchCount() {
    		return _mismatchCount;
    	}
    	
    	public java.util.Collection getErrorMessages() {
    		return _errorMessages;
    	}
    	
    	public String getColumn(int index) {
    		return (String)statementModel.getColumns().get(index);
    	}
    	
    	public String getValue(int index) {
    		return (String)statementModel.getValues().get(index);
    	}
    	
    	public String getTableName() {
    		return statementModel.getTableName();
    	}
    	
    	protected void mismatch(IntStream input, int ttype, BitSet follow)	
    		throws RecognitionException {
    		
    		_mismatchCount++;
    		
    		super.mismatch(input, ttype, follow);
    	}
    	 
    	public void emitErrorMessage(String msg) {
    		_errorMessages.add(msg);
    	}
    	
    	public void recoverFromMismatchedToken(IntStream input,
    										   RecognitionException e,
    										   int ttype,
    										   BitSet follow)
    		throws RecognitionException
    	{
    		// if next token is what we are looking for then "delete" this token
    		if ( input.LA(2)==ttype ) {
    			reportError(e);
    			beginResync();
    			input.consume(); // simply delete extra token
    			endResync();
    			input.consume(); // move past ttype token as if all were ok
    			return;
    		}
    		if ( !recoverFromMismatchedElement(input,e,follow) ) {
    			throw e;
    		}
    	}


    public static class statement_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start statement
    // D:\\projects\\Firebird\\client-java.22.head\\src\\main\\org\\firebirdsql\\jdbc\\parser\\JaybirdSql.g3:224:1: statement : ( insertStatement | deleteStatement | updateStatement | updateOrInsertStatement );
    public final statement_return statement() throws RecognitionException {
        statement_return retval = new statement_return();
        retval.start = input.LT(1);
        int statement_StartIndex = input.index();
        CommonTree root_0 = null;

        insertStatement_return insertStatement1 = null;

        deleteStatement_return deleteStatement2 = null;

        updateStatement_return updateStatement3 = null;

        updateOrInsertStatement_return updateOrInsertStatement4 = null;



        try {
            if ( backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // D:\\projects\\Firebird\\client-java.22.head\\src\\main\\org\\firebirdsql\\jdbc\\parser\\JaybirdSql.g3:225:3: ( insertStatement | deleteStatement | updateStatement | updateOrInsertStatement )
            int alt1=4;
            switch ( input.LA(1) ) {
            case INSERT:
                {
                alt1=1;
                }
                break;
            case DELETE:
                {
                alt1=2;
                }
                break;
            case UPDATE:
                {
                int LA1_3 = input.LA(2);

                if ( (LA1_3==OR) ) {
                    alt1=4;
                }
                else if ( ((LA1_3>=GENERIC_ID && LA1_3<=QUOTED_ID)) ) {
                    alt1=3;
                }
                else {
                    if (backtracking>0) {failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("224:1: statement : ( insertStatement | deleteStatement | updateStatement | updateOrInsertStatement );", 1, 3, input);

                    throw nvae;
                }
                }
                break;
            default:
                if (backtracking>0) {failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("224:1: statement : ( insertStatement | deleteStatement | updateStatement | updateOrInsertStatement );", 1, 0, input);

                throw nvae;
            }

            switch (alt1) {
                case 1 :
                    // D:\\projects\\Firebird\\client-java.22.head\\src\\main\\org\\firebirdsql\\jdbc\\parser\\JaybirdSql.g3:225:5: insertStatement
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_insertStatement_in_statement480);
                    insertStatement1=insertStatement();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, insertStatement1.getTree());

                    }
                    break;
                case 2 :
                    // D:\\projects\\Firebird\\client-java.22.head\\src\\main\\org\\firebirdsql\\jdbc\\parser\\JaybirdSql.g3:226:5: deleteStatement
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_deleteStatement_in_statement486);
                    deleteStatement2=deleteStatement();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, deleteStatement2.getTree());

                    }
                    break;
                case 3 :
                    // D:\\projects\\Firebird\\client-java.22.head\\src\\main\\org\\firebirdsql\\jdbc\\parser\\JaybirdSql.g3:227:5: updateStatement
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_updateStatement_in_statement492);
                    updateStatement3=updateStatement();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, updateStatement3.getTree());

                    }
                    break;
                case 4 :
                    // D:\\projects\\Firebird\\client-java.22.head\\src\\main\\org\\firebirdsql\\jdbc\\parser\\JaybirdSql.g3:229:5: updateOrInsertStatement
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_updateOrInsertStatement_in_statement499);
                    updateOrInsertStatement4=updateOrInsertStatement();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, updateOrInsertStatement4.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( backtracking>0 ) { memoize(input, 1, statement_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end statement

    public static class deleteStatement_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start deleteStatement
    // D:\\projects\\Firebird\\client-java.22.head\\src\\main\\org\\firebirdsql\\jdbc\\parser\\JaybirdSql.g3:249:1: deleteStatement : DELETE FROM tableName ;
    public final deleteStatement_return deleteStatement() throws RecognitionException {
        deleteStatement_return retval = new deleteStatement_return();
        retval.start = input.LT(1);
        int deleteStatement_StartIndex = input.index();
        CommonTree root_0 = null;

        Token DELETE5=null;
        Token FROM6=null;
        tableName_return tableName7 = null;


        CommonTree DELETE5_tree=null;
        CommonTree FROM6_tree=null;

        try {
            if ( backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // D:\\projects\\Firebird\\client-java.22.head\\src\\main\\org\\firebirdsql\\jdbc\\parser\\JaybirdSql.g3:249:17: ( DELETE FROM tableName )
            // D:\\projects\\Firebird\\client-java.22.head\\src\\main\\org\\firebirdsql\\jdbc\\parser\\JaybirdSql.g3:250:4: DELETE FROM tableName
            {
            root_0 = (CommonTree)adaptor.nil();

            DELETE5=(Token)input.LT(1);
            match(input,DELETE,FOLLOW_DELETE_in_deleteStatement516); if (failed) return retval;
            if ( backtracking==0 ) {
            DELETE5_tree = (CommonTree)adaptor.create(DELETE5);
            adaptor.addChild(root_0, DELETE5_tree);
            }
            FROM6=(Token)input.LT(1);
            match(input,FROM,FOLLOW_FROM_in_deleteStatement518); if (failed) return retval;
            if ( backtracking==0 ) {
            FROM6_tree = (CommonTree)adaptor.create(FROM6);
            adaptor.addChild(root_0, FROM6_tree);
            }
            pushFollow(FOLLOW_tableName_in_deleteStatement520);
            tableName7=tableName();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) adaptor.addChild(root_0, tableName7.getTree());
            if ( backtracking==0 ) {
              
              				statementModel.setStatementType(JaybirdStatementModel.DELETE_TYPE);
              			
            }

            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( backtracking>0 ) { memoize(input, 2, deleteStatement_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end deleteStatement

    public static class updateStatement_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start updateStatement
    // D:\\projects\\Firebird\\client-java.22.head\\src\\main\\org\\firebirdsql\\jdbc\\parser\\JaybirdSql.g3:273:1: updateStatement : UPDATE tableName SET assignments ;
    public final updateStatement_return updateStatement() throws RecognitionException {
        updateStatement_return retval = new updateStatement_return();
        retval.start = input.LT(1);
        int updateStatement_StartIndex = input.index();
        CommonTree root_0 = null;

        Token UPDATE8=null;
        Token SET10=null;
        tableName_return tableName9 = null;

        assignments_return assignments11 = null;


        CommonTree UPDATE8_tree=null;
        CommonTree SET10_tree=null;

        try {
            if ( backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // D:\\projects\\Firebird\\client-java.22.head\\src\\main\\org\\firebirdsql\\jdbc\\parser\\JaybirdSql.g3:273:17: ( UPDATE tableName SET assignments )
            // D:\\projects\\Firebird\\client-java.22.head\\src\\main\\org\\firebirdsql\\jdbc\\parser\\JaybirdSql.g3:274:4: UPDATE tableName SET assignments
            {
            root_0 = (CommonTree)adaptor.nil();

            UPDATE8=(Token)input.LT(1);
            match(input,UPDATE,FOLLOW_UPDATE_in_updateStatement544); if (failed) return retval;
            if ( backtracking==0 ) {
            UPDATE8_tree = (CommonTree)adaptor.create(UPDATE8);
            adaptor.addChild(root_0, UPDATE8_tree);
            }
            pushFollow(FOLLOW_tableName_in_updateStatement546);
            tableName9=tableName();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) adaptor.addChild(root_0, tableName9.getTree());
            SET10=(Token)input.LT(1);
            match(input,SET,FOLLOW_SET_in_updateStatement548); if (failed) return retval;
            if ( backtracking==0 ) {
            SET10_tree = (CommonTree)adaptor.create(SET10);
            adaptor.addChild(root_0, SET10_tree);
            }
            pushFollow(FOLLOW_assignments_in_updateStatement550);
            assignments11=assignments();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) adaptor.addChild(root_0, assignments11.getTree());
            if ( backtracking==0 ) {
              
              				statementModel.setStatementType(JaybirdStatementModel.UPDATE_TYPE);
              			
            }

            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( backtracking>0 ) { memoize(input, 3, updateStatement_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end updateStatement

    public static class assignments_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start assignments
    // D:\\projects\\Firebird\\client-java.22.head\\src\\main\\org\\firebirdsql\\jdbc\\parser\\JaybirdSql.g3:280:1: assignments : assignment ( ',' assignment )* ;
    public final assignments_return assignments() throws RecognitionException {
        assignments_return retval = new assignments_return();
        retval.start = input.LT(1);
        int assignments_StartIndex = input.index();
        CommonTree root_0 = null;

        Token char_literal13=null;
        assignment_return assignment12 = null;

        assignment_return assignment14 = null;


        CommonTree char_literal13_tree=null;

        try {
            if ( backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }
            // D:\\projects\\Firebird\\client-java.22.head\\src\\main\\org\\firebirdsql\\jdbc\\parser\\JaybirdSql.g3:280:13: ( assignment ( ',' assignment )* )
            // D:\\projects\\Firebird\\client-java.22.head\\src\\main\\org\\firebirdsql\\jdbc\\parser\\JaybirdSql.g3:280:15: assignment ( ',' assignment )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_assignment_in_assignments568);
            assignment12=assignment();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) adaptor.addChild(root_0, assignment12.getTree());
            // D:\\projects\\Firebird\\client-java.22.head\\src\\main\\org\\firebirdsql\\jdbc\\parser\\JaybirdSql.g3:280:26: ( ',' assignment )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==COMMA) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // D:\\projects\\Firebird\\client-java.22.head\\src\\main\\org\\firebirdsql\\jdbc\\parser\\JaybirdSql.g3:280:27: ',' assignment
            	    {
            	    char_literal13=(Token)input.LT(1);
            	    match(input,COMMA,FOLLOW_COMMA_in_assignments571); if (failed) return retval;
            	    if ( backtracking==0 ) {
            	    char_literal13_tree = (CommonTree)adaptor.create(char_literal13);
            	    adaptor.addChild(root_0, char_literal13_tree);
            	    }
            	    pushFollow(FOLLOW_assignment_in_assignments573);
            	    assignment14=assignment();
            	    _fsp--;
            	    if (failed) return retval;
            	    if ( backtracking==0 ) adaptor.addChild(root_0, assignment14.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);
